Filter section for desktop was added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
-   <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -89,7 +88,11 @@
             <p id="main-status" class="status"></p>
             <!-- JS fyller denna lista med TOPP 3 -->
             <ul id="main-list" class="challenges__list"></ul>
-             <!-- <li class="challenges__listItem"></li>  -->
+            <!-- <li class="challenges__listItem"></li>  -->
+
+            <ul id="main-list-mobile"></ul>
+            <p id="main-status-mobile"></p>
+            <!-- <li class="challenges__listItemMobile"></li>  -->
 
             <div class="challenges__buttons">
                 <a class="challenges__onsite" href="#">On-site Challenges</a>
@@ -203,7 +206,7 @@
             </menu>
         </div>
     </footer>
-    <script src="main.js"></script> 
+    <script src="main.js"></script>
 </body>
 
 </html>
