Filter function was addad

--- a/all.html
+++ b/all.html
@@ -89,7 +89,7 @@
             </div>
           </div>
 
-          <div class="filter tags">
+          <div class="filterTags">
             <h3 class="filter__title">By tags</h3>
 
             <div class="tag">
@@ -104,7 +104,7 @@
           </div>
           <div class="filter__row">
 
-            <div class="filter search-bar">
+            <div class="filterKeyword">
               <h3 class="filter__title">Or type to search for a keyword</h3>
               <input type="text" placeholder="Start typing to filter...">
             </div>
