--- a/all.html
+++ b/all.html
@@ -49,7 +49,7 @@
       <button class="filter__open"> Filter challenges </button>
 
       <!--Filterinnehållet-->
-      <article class="filter__content" hidden>
+     <!-- <article class="filter__content" hidden>
         <button class="filter__close" > X </button>
         <h2 class="filter__title">Filter challenges </h2>
         <div class="filter type">
@@ -110,7 +110,7 @@
             </div>
           </div> 
 
-      </article>
+      </article> -->
 
 
           <!-- -->
