Implemant separation of concerns by new API.js fil and use module

--- a/all.html
+++ b/all.html
@@ -223,8 +223,9 @@
       </menu>
     </div>
   </footer>
-
-  <script src="main.js"></script>
+<script type="module" src="./main.js"></script>
+  <!-- <script src="main.js"></script>
+   <script src="API.js" type="module"></script>  -->
 </body>
 
 </html>
