--- a/index.html
+++ b/index.html
@@ -206,7 +206,9 @@
             </menu>
         </div>
     </footer>
-    <script src="main.js"></script>
+   <!-- <script src="main.js"></script>
+    <script src="API.js" type="module"></script> -->
+<script type="module" src="./main.js"></script>
 </body>
 
 </html>
